[gd_scene load_steps=23 format=2]

[ext_resource path="res://game/game_stats.gd" type="Script" id=1]
[ext_resource path="res://game/game-stats/nav_button.gd" type="Script" id=2]
[ext_resource path="res://game/game-stats/stats_container.gd" type="Script" id=3]
[ext_resource path="res://game/assets/map.png" type="Texture" id=4]
[ext_resource path="res://game/assets/earth.png" type="Texture" id=5]
[ext_resource path="res://game/assets/systems/yellow.png" type="Texture" id=6]
[ext_resource path="res://game/assets/systems/pastel.png" type="Texture" id=7]
[ext_resource path="res://game/assets/systems/purple.png" type="Texture" id=8]
[ext_resource path="res://game/assets/systems/orange.png" type="Texture" id=9]
[ext_resource path="res://game/assets/systems/blue.png" type="Texture" id=10]
[ext_resource path="res://game/game-stats/resources_container.gd" type="Script" id=11]
[ext_resource path="res://game/assets/background.png" type="Texture" id=12]
[ext_resource path="res://game/game-stats/nav_menu.gd" type="Script" id=13]
[ext_resource path="res://game/game-stats/WarningLabelContainer.gd" type="Script" id=14]
[ext_resource path="res://game/8bitfont.tres" type="DynamicFont" id=15]
[ext_resource path="res://game/game-stats/player_position.gd" type="Script" id=16]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[node name="PlayerStats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_stats" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="PlayerPosition" type="Label" parent="player_stats"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 16 )

[node name="NavMenu" type="PopupMenu" parent="player_stats"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.0
margin_top = 75.0
margin_right = -77.0
margin_bottom = -80.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBgContainer" type="ViewportContainer" parent="player_stats/NavMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="player_stats/NavMenu/NavBgContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.823529, 0.823529, 0.823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="player_stats/NavMenu/NavBgContainer/Border"]
position = Vector2( 565, 282 )
scale = Vector2( 2.19141, 2.34454 )
texture = ExtResource( 12 )

[node name="Earth" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -109.5
margin_right = -37.0
margin_bottom = 110.5
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -541.0
margin_top = -195.5
margin_right = -450.0
margin_bottom = -103.5
rect_rotation = 15.5
focus_mode = 0
custom_styles/pressed = SubResource( 2 )
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magenta" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -980.0
margin_top = 79.5
margin_right = -835.0
margin_bottom = 199.5
focus_mode = 0
custom_styles/pressed = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pastel" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -566.0
margin_top = 131.5
margin_right = -443.0
margin_bottom = 245.5
rect_rotation = -69.7
focus_mode = 0
custom_styles/pressed = SubResource( 4 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orange" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -779.0
margin_top = -83.5
margin_right = -631.0
margin_bottom = 41.5
focus_mode = 0
custom_styles/pressed = SubResource( 5 )
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yellow" type="Button" parent="player_stats/NavMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -911.0
margin_top = -206.5
margin_right = -836.0
margin_bottom = -127.5
rect_rotation = 86.5
focus_mode = 0
custom_styles/pressed = SubResource( 6 )
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="VBoxContainer" parent="player_stats"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.23222
margin_top = -101.858
margin_right = 224.232
margin_bottom = 29.1421
rect_scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="player_stats/StatsContainer"]
margin_right = 219.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 15 )
text = "Health* 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Label" parent="player_stats/StatsContainer"]
margin_top = 24.0
margin_right = 219.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 15 )
text = "Attack* 10"

[node name="Speed" type="Label" parent="player_stats/StatsContainer"]
margin_top = 48.0
margin_right = 219.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 15 )
text = "Speed* 35"

[node name="Fuel" type="Label" parent="player_stats/StatsContainer"]
margin_top = 72.0
margin_right = 219.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 15 )
text = "Fuel"

[node name="FuelContainer" type="ColorRect" parent="player_stats/StatsContainer"]
margin_top = 96.0
margin_right = 219.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 30 )
color = Color( 1, 0.345098, 0.345098, 1 )

[node name="FuelLevel" type="ColorRect" parent="player_stats/StatsContainer/FuelContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.0
margin_right = 220.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 30 )
color = Color( 0.658824, 0.941176, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesContainer" type="HBoxContainer" parent="player_stats"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -468.0
margin_top = -33.0
margin_right = 144.0
margin_bottom = -3.0
grow_horizontal = 0
rect_scale = Vector2( 0.75, 0.75 )
alignment = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iron" type="Label" parent="player_stats/ResourcesContainer"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
text = "Iron* 24"

[node name="Silver" type="Label" parent="player_stats/ResourcesContainer"]
margin_left = 144.0
margin_top = 5.0
margin_right = 314.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
text = "Silver* 10"

[node name="Gold" type="Label" parent="player_stats/ResourcesContainer"]
margin_left = 318.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
text = "Gold* 10"

[node name="Coin" type="Label" parent="player_stats/ResourcesContainer"]
margin_left = 462.0
margin_top = 5.0
margin_right = 612.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 15 )
text = "Coins* 10"

[node name="NavButton" type="TextureButton" parent="player_stats"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -69.0
margin_top = 2.0
margin_right = -1.0
margin_bottom = 56.0
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelWarningContainer" type="VBoxContainer" parent="player_stats"]
margin_left = 10.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 40.0
rect_scale = Vector2( 0.75, 0.75 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="player_stats/FuelWarningContainer"]
margin_right = 150.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 15 )
[connection signal="pressed" from="player_stats/NavMenu/Earth" to="player_stats/NavMenu" method="_on_Earth_pressed"]
[connection signal="pressed" from="player_stats/NavMenu/Blue" to="player_stats/NavMenu" method="_on_Blue_pressed"]
[connection signal="pressed" from="player_stats/NavMenu/Magenta" to="player_stats/NavMenu" method="_on_Magenta_pressed"]
[connection signal="pressed" from="player_stats/NavMenu/Pastel" to="player_stats/NavMenu" method="_on_Pastel_pressed"]
[connection signal="pressed" from="player_stats/NavMenu/Orange" to="player_stats/NavMenu" method="_on_Orange_pressed"]
[connection signal="pressed" from="player_stats/NavMenu/Yellow" to="player_stats/NavMenu" method="_on_Yellow_pressed"]
[connection signal="pressed" from="player_stats/NavButton" to="player_stats/NavButton" method="_on_NavButton_pressed"]
